Fixed pep8 and add improved example settings

--- a/local_settings.py.example
+++ b/local_settings.py.example
@@ -15,3 +15,6 @@ DATABASES = {
 
 COMPRESS_ENABLE = True
 COMPRESS_ROOT = '/tmp/'
+
+EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
+LANGUAGE_CODE = 'en-us' # 'es-pr'
