Setup email and fixed as many translations as i could.

--- a/local_settings.py.example
+++ b/local_settings.py.example
@@ -18,3 +18,4 @@ COMPRESS_ROOT = '/tmp/'
 
 EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
 LANGUAGE_CODE = 'en-us' # 'es-pr'
+SITE_URL = 'localhost'
